[gd_scene load_steps=6 format=3 uid="uid://bdqjg1ugjmcqn"]

[ext_resource type="Script" uid="uid://cyl3fvpc6xkbl" path="res://ui/menus/main_menu.gd" id="1_t7e0r"]
[ext_resource type="Texture2D" uid="uid://qrv8k0tk4f6j" path="res://assets/ui/MenuScreen_WIP01.png" id="2_qc8qn"]

[sub_resource type="Animation" id="Animation_qc8qn"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(373.5, -0.2, 0, 0.2, 0, 373.5, -0.0005, 0, 0.0005, 0),
"times": PackedFloat32Array(0, 0.001)
}

[sub_resource type="Animation" id="Animation_5oih7"]
resource_name = "slide"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(373.5, -0.2, 0, 0.2, 0, -748, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ssi0"]
_data = {
&"RESET": SubResource("Animation_qc8qn"),
&"slide": SubResource("Animation_5oih7")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_t7e0r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qc8qn")
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.5
offset_top = -294.0
offset_right = 327.5
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -250.5
offset_right = 260.0
offset_bottom = 250.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Moth Tarot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="BtnPlay" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="BtnSettings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SETTINGS"

[node name="BtnCredits" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CREDITS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5ssi0")
}

[connection signal="pressed" from="Panel/VBoxContainer/BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BtnCredits" to="." method="_on_btn_credits_pressed"]
